<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12pt"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_title"
        android:textSize="36sp"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/edit_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_image"
        android:layout_marginTop="10dp"
        android:inputType="textUri"/>
    <Button android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="DownloadImageClick"/>
    <ImageView android:id="@+id/image_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>